# localwork

./: .dockerignore  .env.example  .gitignore  .gitmodules  Makefile  README.md  README.zh.md  STATUS.md  TASKBOARD.json
clients/capture/: README.md  capture.yaml.example  pyproject.toml
clients/capture/src/capture/: __init__.py  __main__.py  agent.py  config.py  permissions.py  screenshot.py  uploader.py  url_probe.py  windows.py
deploy/mac/: compose.data.yml  compose.honcho.yml  download-dev-models.sh  honcho.Dockerfile  honcho.env.example  setup-honcho.sh  timeline-init.sql
deploy/mac/honcho-patches/: 01-local-patches.diff  02-sanitize-prompts.diff
deploy/mac/llama-launch/: dev-stack.sh  embed.sh  fast.sh  gateway.sh  perceive.sh  sentinel.sh
deploy/server/: DEPLOY.md  download-models.sh  litellm.yaml  sha256.txt
deploy/server/llama-launch/: brain.sh  embed.sh  fast.sh  gateway.sh  perceive.sh  sentinel.sh  server-stack.sh
docs/: AGENT_KICKOFF_PROMPT.md  EXECUTION_HANDBOOK.md  benchmarks.md  licenses.md  model-manifest.md  verification-log.md
services/agentd/: README.md  pyproject.toml
services/agentd/src/agentd/: __init__.py  __main__.py  config.py  embed.py  server.py  tools.py
services/memoryd/: README.md  pyproject.toml
services/memoryd/scripts/: eval_perceive.py  eval_sentinel.py  run_m34_pipeline.py  seed_fixtures.py  seed_honcho.py  test_parse_offline.py
services/memoryd/src/memoryd/: __init__.py  __main__.py  config.py  models.py  pipeline.py  search.py  server.py  stages.py  storage.py
services/ocrd/: README.md  pyproject.toml
services/ocrd/bench/: __init__.py  accuracy_ab.py  accuracy_ab_full.json  accuracy_rapidocr_only.json
services/ocrd/src/ocrd/: __init__.py  __main__.py  engine.py  server.py
tests/assets/frame-pairs/: README.md  _build_pairs.py  frame_pairs.json
tests/assets/messages/: README.md  synthetic_messages.json
tests/assets/screenshots/: README.md  chat_01.json  chat_02.json  chat_03.json  chat_04.json  chat_05.json  code_01.json  code_02.json  code_03.json  code_04.json  code_05.json  generate.py  terminal_01.json  terminal_02.json  terminal_03.json  terminal_04.json  terminal_05.json  webpage_01.json  webpage_02.json  webpage_03.json  webpage_04.json  webpage_05.json
tests/assets/sentinel/: README.md  banking_01.json  banking_02.json  banking_03.json  banking_04.json  banking_05.json  generate.py  (+35 more)
