[project]
name = "capture"
version = "0.1.0"
description = "DejaView macOS capture client: screen + window metadata -> memoryd (handbook §5.1/§5.2)"
readme = "README.md"
authors = [
    { name = "Aidenwu0209", email = "1418557225@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mss>=10.2.0",
    "pillow>=12.3.0",
    "pyobjc-core>=12.2.1",
    "pyobjc-framework-cocoa>=12.2.1",
    "pyobjc-framework-quartz>=12.2.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
capture = "capture:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
