[project]
name = "agentd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aidenwu0209", email = "1418557225@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "pillow>=12.3.0",
    "psycopg>=3.3.4",
    "psycopg-pool>=3.3.1",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
agentd = "agentd:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
